Update title and description on index.html

--- a/source/localizable/index.html
+++ b/source/localizable/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Is Oct 7th 2015 the end of the world? Biblical evidence suggests that Oct 7th is very likely the last day">
+  <title>Will the World End on October 7th 2015?</title>
+  <meta name="description" content="Could the last day be October 7th? Biblical evidence indicates that October 7th 2015 is very likely the end." />
   <meta name="author" content="">
+
+
+
   <!-- GOOGLE ANALYTICS  -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -45,8 +49,6 @@
 
 
 
-
-  <title>Is Oct 7th 2015 the end of the world?</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
