Major update with I18n support and start of languages negotiation
- Replaced index.html with index.html.erb template that has all English
  text replaced with tags.
- Configured WebtranslateIt.com utility wti so when pulling a translation,
  it automatically rebuilds the staging site.
- Updated config.rb so English site is now in the /en/ subdirectory. This
  is required in order for language negotiation to work at the root level.
- Minor updates to /logo/index.html for logos index.

--- a/source/logo/index.html
+++ b/source/logo/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Oct7th.com Logos</title>
 </head>
 
 <body>
 <div align="center"> 
 
-<h1> Click to download </h1>
+<h1>Oct7th.com Logos</h1>
+
+<h2>Click to download</h2>
+
 <a href="logo-bw-v.eps.zip"><img src="bw-logo-link.gif" width="250" height="77" alt=""/></a><br>
 Black and white .EPS vector file<br><br>
 <a href="logo-bw.png.zip"><img src="bw-logo-link.gif" width="250" height="77" alt=""/></a><br>
@@ -29,9 +32,6 @@ Color .JPG file<br><br>
 High Res Color .PNG file (transparent)<br><br>
 <a href="logo-reverse-hr.png.zip"><img src="rev-logo-link.gif" width="250" height="77" alt=""/> </a><br>
 High Res REVERSE Color .PNG file (transparent)<br><br>
-
-
-
 
 </div>
 </body>
